[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.7.1"
molecule = "0.7.2"
ckb-system-scripts = "0.5"
blst = "0.3.4"
rand = "0.7.0"
rlp = "0.5.1"
keccak-hash = "0.8.0"
bit-vec = "0.6.3"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
ckb-vm = { version = "0.21.1", features = ["asm"] }
secp256k1 = { version = "0.22.1", features = ["rand-std", "bitcoin_hashes", "recovery"] }